amend travis yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,13 @@
 language: objective-c
 osx_image: xcode9.3
-xcode_project: Infusion.xcodeproj
-xcode_scheme: Infusion
-
+env:
+  global:
+    - PROJECT=Infusion.xcodeproj
+    - SCHEME=Infusion
+    - SDK=iphonesimulator
+    - DEST="OS=11.3,name=iPhone 8"
+    - CONFIG=Release
+script:
+  - set -o pipefail
+  - open -b com.apple.iphonesimulator # Workaround https://github.com/travis-ci/travis-ci/issues/3040
+  - xcodebuild test -project "$PROJECT" -scheme "$SCHEME" -sdk "$SDK" -destination "$DEST" -configuration "$CONFIG" ENABLE_TESTABILITY=YES | xcpretty
